# BFGS

./: .gitignore  Alternativa.hs  Application.hs  Categoria.hs  Foundation.hs  Home.hs  Login.hs  Main.hs  Partida.hs  Pergunta.hs  Utils.hs  bfgs.cabal  client_session_key.aes  curls  routes  stack.yaml
admin/: index.html
admin/js/: index.js
admin/templates/: main.html
admin/templates/pergunta/: form.html  show.html
changeUser/: carla  matheus  rodolpho
ionic/: config.xml  gulpfile.js  ionic.config.json  package.json
ionic/plugins/: fetch.json
ionic/plugins/cordova-plugin-console/: package.json
ionic/plugins/cordova-plugin-device/: package.json
ionic/plugins/cordova-plugin-splashscreen/: package.json
ionic/plugins/cordova-plugin-statusbar/: package.json
ionic/plugins/cordova-plugin-whitelist/: package.json
ionic/plugins/ionic-plugin-keyboard/: package.json
ionic/resources/: icon.psd
ionic/scss/: _categorias.scss  _fausto.scss  _helper.scss  _login.scss  _menu.scss  _questoes.scss  _regras.scss  ionic.app.scss
ionic/www/: index.html  manifest.json
ionic/www/css/: ionic.app.css  ionic.app.min.css
ionic/www/js/: app.js  controllers.js  services.js
ionic/www/lib/ionic/scss/: _mixins.scss  ionic.scss
ionic/www/templates/: acertou.html  cadastro.html  errou.html  fogo.html  inicio.html  login.html  menu.html  placar.html  questao.html  regras.html
