name:               bfgs
version:            0.0.0
cabal-version:      >= 1.8
build-type:         Simple
extra-source-files: routes

executable          bfgs
  main-is:          Main.hs
  other-modules:    Application
                    Foundation
                    Home
                    Login
                    Categoria
                    Partida
                    Pergunta
                    Alternativa
                    Utils

  ghc-options:      -Wall -fwarn-tabs -O2

  build-depends:  base
                , yesod
                , yesod-static
                , persistent
                , persistent-postgresql
                , text
                , monad-logger
                , bytestring
                , http-types
                , shakespeare
                , time
                , SHA2
                , random
                , random-shuffle

  ghc-options:    -threaded -O2 -rtsopts -with-rtsopts=-N
